--- a/Frontends/MShop.WebUI/wwwroot/UI/index.html
+++ b/Frontends/MShop.WebUI/wwwroot/UI/index.html
@@ -285,8 +285,8 @@
                             <img class="img-fluid" src="img/cat-1.jpg" alt="">
                         </div>
                         <div class="flex-fill pl-3">
-                            <h6>Category Name</h6>
-                            <small class="text-body">100 Products</small>
+                            <h6>Kategori İsmi</h6>
+                            <small class="text-body">100 Ürün </small>
                         </div>
                     </div>
                 </a>
