--- a/Frontends/MShop.WebUI/wwwroot/admin/forms.html
+++ b/Frontends/MShop.WebUI/wwwroot/admin/forms.html
@@ -22,7 +22,7 @@
 				<button class="topbar-toggler more"><i class="la la-ellipsis-v"></i></button>
 			</div>
 			<nav class="navbar navbar-header navbar-expand-lg">
-				<div class="container-fluid">
+				<div class="container-fluid">f
 					
 					<form class="navbar-left navbar-form nav-search mr-md-3" action="">
 						<div class="input-group">
